bk_ida/gccida/g1/ix86_hard_regno_mode_ok
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_hard_regno_mode_ok/src/i386.c:12847:42: error: must use 'enum' tag to refer to type 'machine_mode'
int  ix86_hard_regno_mode_ok( int regno, machine_mode mode) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_hard_regno_mode_ok/src/i386.c:12849:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v2; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_hard_regno_mode_ok/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_hard_regno_mode_ok/src/i386.c:12859:16: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
LODWORD( v4) = mode_class_0[mode] == MODE_CC; 
               ^~~~~~~~~~~~
               mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_hard_regno_mode_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_hard_regno_mode_ok/src/i386.c:12863:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v2 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_hard_regno_mode_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_hard_regno_mode_ok/src/obj/i386.o] Error 1
